--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <img class="modal-content" id="enlargedImg">
     </div>
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31085.5789306461!2d80.2201045!3d13.1183484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265887c2c471b%3A0xd426cb96ec02b2c3!2sOviyashristy%20-%20School%20of%20Culinary%20Arts%20%26%20Crafts!5e0!3m2!1sen!2sin!4v1730439871034!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     <!-- About Us Section -->
     <footer>
         <section id="about-us">
