--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Oviyashristy - Arts and Crafts School</title>
+    <title>Oviyashristy - Arts and Crafts School - Drawing classes in Kolathur</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
 
     <!-- Mid Section with Student Art -->
     <section id="student-art">
-        <h2>Student Artwork</h2>
+        <h2>Drawing classes in Kolathur - Student Artwork</h2>
         <div class="art-gallery">
             <img src="static/img1.jpeg" alt="Student Art 1" onclick="enlargeImage(this)">
             <img src="static/static1 (2).jpeg" alt="Student Art 2" onclick="enlargeImage(this)">
@@ -47,7 +47,7 @@
     <footer>
         <section id="about-us">
             <h2>About Us</h2>
-            <p>Oviyashristy is a renowned arts and crafts school offering a wide range of creative programs for students aged 2 to 17, as well as adults. We have been running for over 20 years, teaching everything from drawing, painting, and murals to the traditional art of Tanjore. Our structured curriculum takes students from beginner to advanced levels, with grade exams ranging from Grade 1 to Grade 8.</p>
+            <p>Drawing classes in Kolathur. Oviyashristy is a renowned arts and crafts school offering a wide range of creative programs for students aged 2 to 17, as well as adults. We have been running for over 20 years, teaching everything from drawing, painting, and murals to the traditional art of Tanjore. Our structured curriculum takes students from beginner to advanced levels, with grade exams ranging from Grade 1 to Grade 8.</p>
         </section>
     </footer>
 
